# ezjww

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: dxf.rs  error.rs  header.rs  lib.rs  model.rs  parser.rs  reader.rs
src/ezjww/: __init__.py  _core.pyi  plot.py
tests/python/: test_plot_helpers.py  test_public_api.py
